tests/checker/ok/parallel_combinator_surface.can
use canon/std/concurrent

main = () -> Unit {
    "ok".print()
}
