tests/checker/fail/concurrent_bare_call.can
use canon/builtins/http_server
use canon/std/concurrent

main = () -> Unit {
    parallel("a".slowEcho(), "b".slowEcho())
    race("a".slowEcho(), "b".slowEcho()).print()
}
